# pummel

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  patch.diff  test.rs
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.jules/: bolt.md  sentinel.md
benches/: data_path_benchmarks.rs  engine_benchmarks.rs  hot_path_micro_benchmarks.rs  metrics_benchmark.rs  metrics_record_path_benchmarks.rs  template_render_path_benchmarks.rs  throughput_benchmarks.rs
docker/: Dockerfile
docs/: dynamic-scenarios.md  installation.md  release-signing.pub
examples/: config_example.toml  config_example.yaml  dynamic_login.toml  simple_load_test.rs  toml_load_test.rs
examples/fixtures/: users.csv
scripts/: install.ps1  install.sh
scripts/tests/: installer_harness.ps1  installer_harness.sh
src/: config.rs  config.rs.orig  data.rs  engine.rs  error.rs  graph.rs  http.rs  lib.rs  logging.rs  metrics.rs  scenario.rs  telemetry.rs
tests/: cli.rs  config_cli_integration.rs  dynamic_data_sources.rs  dynamic_scenarios.rs  engine_behavior.rs  load_model.rs  metrics_integration.rs  real_http_load.rs  sustained_load.rs
